# ominimo-api-gateway

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: adding-new-model.md  architecture.md  observability.md  testing-routing.md
endpoints/model_a_endpoint/: Dockerfile  main.py  pyproject.toml
endpoints/model_b_endpoint/: .dockerignore  Dockerfile  main.py  pyproject.toml
endpoints/model_c_endpoint/: Dockerfile  main.py  pyproject.toml
gateway/: .env.example  Dockerfile
gateway/app/: __init__.py  config.py  logger.py  main.py  models.py  observability.py  routing.py
gateway/config/: models.yaml
tests/: conftest.py  metrics.sh  sample_payloads.json  smoke.sh  test_gateway.py  test_sample_payloads.py
tests/extras/: ab_distribution.sh  ab_hammer.py  latency_sample.sh  reload_config.sh
